@@ -8,7 +8,8 @@ import com.alibaba.fastjson.JSONObject;
 import apijson.orm.AbstractFunctionParser;
 import apijson.orm.script.JSR223ScriptExecutor;
 import apijson.orm.script.ScriptExecutor;
-import jdk.nashorn.api.scripting.NashornScriptEngineFactory;
+// JDK 1.8~16 用 JDK 自带的，JDK 17+ 必须单独依赖 import jdk.nashorn.api.scripting.NashornScriptEngineFactory;
+import org.openjdk.nashorn.api.scripting.NashornScriptEngineFactory;
 
 public class NashornScriptExecutor extends JSR223ScriptExecutor {
 	@SuppressWarnings("restriction")
